fixed toast container issue displaying it too big inside of the navbar

--- a/web/styles/Home.scss
+++ b/web/styles/Home.scss
@@ -14,33 +14,22 @@
     position: relative;
 
     background-image: linear-gradient(
-        to right bottom,
-        rgba(24, 24, 28, 0.85) 48%,
-        rgba(24, 24, 28, 0) 68%,
-        rgba(23, 23, 27, 1) 100%
+        to right,
+        rgba(23, 23, 27, 0.97) 37.5%,
+        rgba(23, 23, 27, 0) 68%,
+        rgba(23, 23, 27, 1) 97.5%
       ),
       url('../public/assets/home/home-hero-img.png');
 
     background-position: auto, center;
     background-size: auto, cover;
-
+    
     & > .hero-overlay {
       position: absolute;
-      top: 0;
+      bottom: -30rem;
       left: 0;
       width: 100%;
-      height: 150%;
-
-      background-image: linear-gradient(
-        to right,
-        rgba(23, 23, 27, 1) 0%,
-        rgba(23, 23, 27, 0) 10%,
-        rgba(23, 23, 27, 0) 90%,
-        rgba(23, 23, 27, 1) 100%
-      ), url('../public/assets/home/overlay.png');
-      // background position should be at the absolute bottom of the div
-      background-position: auto, bottom;
-      background-size: auto, cover;
+      height: 100%;
     }
 
     &__content {
